# c2rust

./: .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .lgtm.yml  .travis.yml  .typos.toml  Cargo.toml  Dockerfile  LICENSE  LexerTest.cpp  Makefile  Makefile.am  Makefile.am.inc  README.md  a.out  azure-pipelines.yml  book.toml  build.rs  build.sh  build_ast_extractor.py  c2rust_dev  compound_assignment.c  configure.ac  default.nix  demo.sh  docker_build.sh  flake.nix  json_tokener.c  json_util.c  linkhash.c  math_demo.c  nix-tinycbor-cmake.patch  plugin_stub.rs  printbuf.c  pyproject.toml  requirements.txt  rust-toolchain  rust-toolchain.toml  (+4 more)
analysis/plugin/: Cargo.toml
analysis/runtime/: Cargo.toml
ast-exporter/: AstExporter.cpp  CMakeLists.txt  Cargo.toml  FloatingLexer.h  ast_tags.hpp  build.rs
ast-exporter/src/: AstExporter.hpp  CMakeLists.txt  ExportResult.cpp  Main.cpp  ast_tags.hpp  lib.rs
ast-extractor/: AstExtractor.cpp  CMakeLists.txt  ast_tags.hpp
ast-importer/: .gitignore  Cargo.toml  README.md  build.rs  foo.c  foo.rs
ast-importer/.cargo/: config
ast-importer/src/: c_ast.rs  c_ast_conversion.rs  cfg.rs  clang_ast.rs  comment_store.rs  convert_type.rs  exporter.rs  lib.rs  loops.rs  main.rs  name_manager.rs  renamer.rs  translator.rs  translator.rs.orig  typed_convert_type.rs  typed_translator.rs  with_stmts.rs
ast-importer/target.argolis.galois.com/: .rustc_info.json
c2rust/: Cargo.toml  build.rs
c2rust-analyze/: .gitignore  Cargo.toml  README.md  build.rs  rename_nll_facts.py
c2rust-analyze/scripts/: auto_fix_errors.py  extract_working_defs.py  pointwise_metrics.py  pointwise_try_build.sh  pointwise_try_build_unmodified.sh  run_pointwise_metrics.sh  run_pointwise_metrics_cfs.sh  run_pointwise_metrics_lighttpd.sh
c2rust-analyze/src/: analyze.rs  annotate.rs  atoms.rs  c_void_casts.rs  canonical_path.rs  context.rs  def_use.rs  dump.rs  equiv.rs  expr_rewrite.rs  known_fn.rs  labeled_ty.rs  last_use.rs  log.rs  main.rs  panic_detail.rs  pointer_id.rs  ptr_effects.rs  recent_writes.rs  trivial.rs  type_check.rs  type_desc.rs  util.rs
c2rust-analyze/tests/: analyze.rs  auto_fix_errors.rs  filecheck.rs  lighttpd.rs
c2rust-asm-casts/: Cargo.toml
c2rust-asm-casts/src/: lib.rs
c2rust-ast-builder/: Cargo.toml
c2rust-ast-builder/src/: builder.rs  into_symbol.rs  lib.rs
c2rust-ast-exporter/: Cargo.toml  build.rs
c2rust-ast-exporter/src/: .clang-format  .dir-locals.el  AstExporter.cpp  AstExporter.hpp  CMakeLists.txt  Common.hpp  ExportResult.cpp  ExportResult.hpp  FloatingLexer.cpp  FloatingLexer.h  Main.cpp  ast_tags.hpp  clang_ast.rs  lib.rs  tinycbor.config  tinycbor_fix_build.patch
c2rust-ast-printer/: COPYRIGHT  Cargo.toml  README.md
c2rust-ast-printer/src/: helpers.rs  lib.rs  pp.rs  pprust.rs  syntax_priv.rs
c2rust-bitfields/: Cargo.toml  README.md
c2rust-bitfields-derive/: Cargo.toml  README.md
c2rust-bitfields-derive/src/: lib.rs
c2rust-bitfields/c2rust-tests/: test_structs.rs
c2rust-bitfields/src/: lib.rs
c2rust-bitfields/tests/: bitfields.c  check_date.c  test_structs.rs
c2rust-build-paths/: Cargo.toml
c2rust-build-paths/src/: lib.rs
c2rust-macros/: Cargo.toml
c2rust-macros/src/: lib.rs
c2rust-postprocess/: README.md  assist.py  c2rust-postprocess  cache.py  compilers.py  config.py  models.py  postprocess.py  pyproject.toml  tools.py
c2rust-postprocess/postprocess/: __init__.py  __main__.py  cache.py  exclude_list.py  transforms.py  utils.py  validate.py
c2rust-postprocess/tests/: conftest.py  test_apply_file.py  test_cache.py  test_comments_transform.py  test_definitions.py  test_trim_transform.py  test_utils.py  test_validate.py  test_variadic.py
c2rust-refactor/: .gitignore  Cargo.toml  PLUGINS.txt  README.md  build.rs  config.ld  plugin_stub.rs
c2rust-refactor/doc/: gen_command_docs.py  rewrite.md  run_ldoc.sh  run_literate.py  scripting_api.html  select.md
c2rust-refactor/misc/: rustfmt-clean-parens.diff
c2rust-refactor/runtime/: Cargo.toml
c2rust-refactor/scripts/: change_ast_kinds.lua  cleanup_params_locals.lua  example_visitor.lua  inspect.lua  lh_table_counter_cell.rs  noop_traversal.lua  reconstruct_for_range.lua  rust_ast.lua  simplify_paths.lua  test_upgrade_ptr_to_ref.lua  upgrade_ptr_to_ref.lua  utils.lua
c2rust-refactor/src/: api.rs  args.yaml  ast_builder.rs  command.rs  contains_mark.rs  context.rs  driver.rs  file_io.rs  illtyped.rs  lib.rs  macros.rs  main.rs  mark_adjust.rs  node_map.rs  path_edit.rs  pick_node.rs  plugin.rs  print_spans.rs  reflect.rs  resolve.rs  scripting.rs  span_fix.rs  type_map.rs
c2rust-refactor/tests/: run-all-tests.sh  run-test.sh  snapshots.rs
c2rust-rust-tools/: Cargo.toml
c2rust-rust-tools/src/: lib.rs
c2rust-transpile/: .gitignore  Cargo.toml  README.md
c2rust-transpile/src/: args.yaml  convert_type.rs  diagnostics.rs  lib.rs  loops.rs  main.rs  renamer.rs  source_map.rs  transpile.yaml  with_stmts.rs
c2rust-transpile/tests/: module_paths.rs  relooper.rs  snapshots.rs  tokens.rs  translator.rs
c2rust/src/: analysis.yaml  instrument.yaml  main.rs  refactor.yaml  transpile.yaml
c2rust/tests/: test_translator.rs  test_translator_uses_current_transpiler.rs
cross-checks/pointer-tracer/: Cargo.toml  README.md
dynamic_instrumentation/: Cargo.toml  README.md  build.rs
dynamic_instrumentation/src/: arg.rs  callbacks.rs  cast.rs  deref.rs  hooks.rs  instrument.rs  instrument_memory.rs  into_operand.rs  lib.rs  main.rs  point.rs  source.rs
pdg/: Cargo.toml  README.md  build.rs
pdg/src/: assert.rs  builder.rs  graph.rs  info.rs  main.rs  query.rs  util.rs
prettyplease/: .gitattributes  Cargo.toml  README.md
prettyplease/examples/: output.rustc.rs
prettyplease/src/: algorithm.rs  attr.rs  data.rs  expr.rs  generics.rs  item.rs  lib.rs  mac.rs  pat.rs  path.rs  stmt.rs  ty.rs
remove-broken-fns/: Cargo.toml
rust-refactor/: .gitignore  Cargo.toml  PLUGINS.txt  README.md  build.rs  plugin_stub.rs
transpiler/: Cargo.toml  README.md
unstable/: Cargo.toml  README.md  rust-toolchain.toml
(+3649 files in other folders)
