[workspace]
members = [
    "analysis/runtime",
    "c2rust",
    "c2rust-analyze",
    "c2rust-asm-casts",
    "c2rust-ast-builder",
    "c2rust-ast-exporter",
    "c2rust-ast-printer",
    "c2rust-bitfields",
    "c2rust-build-paths",
    "c2rust-transpile",
    "dynamic_instrumentation",
    "pdg",
]
exclude = [
    "analysis/tests",
    "c2rust-macros",
    "examples",
    "tests",
]

[profile.dev.package."*"]
opt-level = 3
