[package]
name = "ast_importer"
version = "0.1.0"
authors = ["Eric Mertens <emertens@galois.com>", "Alec Theriault <atheriault@galois.com>"]
build = "build.rs"

[dependencies]
cbor = "0.4.1"
clap = "2.32"
dtoa = "0.4.2"
serde = "1.0"
serde_json = "1.0"
indexmap = "1.0.1"

[build-dependencies]
bindgen="0.37"
