[package]
name = "ast_importer"
version = "0.1.0"
authors = ["Eric Mertens <emertens@galois.com>", "Alec Theriault <atheriault@galois.com>"]

[dependencies]
serde_cbor = "0.9"
clap = "2.32"
dtoa = "0.4.2"
serde = "1.0"
serde_json = "1.0"
indexmap = { version = "1.0.1", features = ["serde-1"] }
rust_ast_builder = { path = "../rust-ast-builder/" }
libc = "0.2"
ast_exporter = { path = "../ast-exporter" }
