[package]
name = "c2rust-analyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polonius-engine = "0.13.0"
rustc-hash = "1.1.0"
bitflags = "1.3.2"
assert_matches = "1.5.0"

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths" }
print_bytes = "0.7"

[dev-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths" }

[package.metadata.rust-analyzer]
rustc_private = true
