[package]
name = "c2rust-analyze"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C2Rust analysis implementation for lifting unsafe Rust to safe Rust"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
polonius-engine = "0.13.0"
rustc-hash = "1.1.0"
bitflags = "1.3.2"
assert_matches = "1.5.0"
indexmap = "1.9.2"
env_logger = "0.10.0"
log = "0.4.17"
backtrace = "0.3.67"

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths" , version = "0.17.0" }
print_bytes = "1.1"

[dev-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths" , version = "0.17.0" }
clap = { version = "4.1.9", features = ["derive"] }
shlex = "1.1.0"

[package.metadata.rust-analyzer]
rustc_private = true
