[package]
name = "c2rust-asm-casts"
version = "0.1.0"
authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
edition = "2018"
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust/tree/master/c2rust-bitfields"
description = "Type cast helpers for use with C2Rust's inline assembly implementation"

[dependencies]
