[package]
name = "c2rust-asm-casts"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Type cast helpers for use with C2Rust's inline assembly implementation"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
