[package]
name = "c2rust-ast-builder"
version = "0.13.0"
authors = [
  "The C2Rust Project Developers <c2rust@immunant.com>",
  "Eric Mertens <emertens@galois.com>",
]
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust"
description = "Rust AST builder support crate for the C2Rust project"

[dependencies]
