[package]
name = "c2rust-ast-exporter"
version = "0.16.0"
authors = [
        "The C2Rust Project Developers <c2rust@immunant.com>",
        "Eric Mertens <emertens@galois.com>",
        "Alec Theriault <atheriault@galois.com>",
]
links = "clangAstExporter"
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust"
description = "Clang AST extraction API for use in the C2Rust project"
edition = "2021"

[dependencies]
libc = "0.2"
serde = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11"

[build-dependencies]
bindgen = { version = "0.60", features = ["logging"] }
clang-sys = "1.3"
# Pinning until https://github.com/rust-lang/cmake-rs/issues/131 is resolved
# Fixed by https://github.com/rust-lang/cmake-rs/pull/146 on 5/12/2022; waiting for next release.
cmake = "=0.1.45"
env_logger = "0.9"

[features]
default = []

# Force static linking of LLVM
llvm-static = []
