[package]
name = "c2rust-ast-printer"
version = "0.16.0"
authors = ["The Rust Project Developers", "Stephen Crane <sjc@immunant.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/immunant/c2rust"
description = "Customized version of libsyntax rust pretty-printer"

[dependencies]
log = "0.4"
syn = { version = "1.0", features = ["full", "proc-macro", "printing"] }
proc-macro2 = "1.0"
prettyplease = "0.1.9"
