[package]
name = "c2rust-ast-printer"
version.workspace = true
authors = ["The C2Rust Project Developers <c2rust@immunant.com>", "The Rust Project Developers"]
edition.workspace = true
description = "Customized version of libsyntax rust pretty-printer"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords.workspace = true
categories.workspace = true

[dependencies]
log = "0.4"
syn = { version = "2.0", features = ["full", "proc-macro", "printing", "clone-impls"] }
proc-macro2 = "1.0"
prettyplease = "0.2"
