[package]
name = "c2rust-bitfields-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C-compatible struct bitfield derive implementation used in the C2Rust project"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# nightly-2022-08-08 requires these exact versions
proc-macro2 = "=1.0.103"
syn = { version = "=2.0.106", features = ["full"] }
quote = "=1.0.40"

[lib]
proc-macro = true
