[package]
name = "c2rust-bitfields"
version = "0.1.1"
authors = [
    "The C2Rust Project Developers <c2rust@immunant.com>",
    "Daniel Kolsoi <djk@immunant.com>",
]
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust/tree/master/c2rust-bitfields"
edition = "2018"
description = "C-compatible struct bitfield implementation used in the C2Rust project"
readme = "README.md"

[dependencies]
c2rust-bitfields-derive = { version = "0.1", path = "../c2rust-bitfields-derive" }

[dev-dependencies]
libc = "0.2"

[features]
no_std = []
