[package]
name = "c2rust-bitfields"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C-compatible struct bitfield implementation used in the C2Rust project"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2rust-bitfields-derive = { version = "0.21.0", path = "../c2rust-bitfields-derive" }

[features]
no_std = []
