[package]
name = "c2rust-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Procedural macro support crate for C2Rust"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
