[package]
name = "c2rust-refactor"
version = "0.14.0"
authors = [
  "The C2Rust Project Developers <c2rust@immunant.com>",
  "Stuart Pernsteiner <spernsteiner@galois.com>",
]
build = "build.rs"
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust"
description = "C2Rust refactoring tool implementation"
edition = "2018"

[dependencies]
diff = "0.1"
json = "0.12"
libc = "0.2"
regex = "1.1"
ena = "0.13"
c2rust-ast-builder = { version = "0.14.0", path = "../c2rust-ast-builder" }
c2rust-ast-printer = { version = "0.14.0", path = "../c2rust-ast-printer" }
indexmap = { version = "1.0.1", features = ["serde-1"] }
cargo = "0.40"
clap = {version = "2.33", features = ["yaml"]}
env_logger = "0.7"
log = "0.4"
rlua = "0.17"
slotmap = {version = "0.4", features = ["unstable"]}
derive_more = "0.99"
c2rust-macros = { version = "0.14.0", path = "../c2rust-macros" }
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.4", optional = true }

[dev-dependencies]
z3 = "0.4.0"
quickcheck = "0.9.0"
rand = "0.7"

[lib]
name = "c2rust_refactor"
path = "src/lib.rs"

[features]
default = []
profile = ["flame", "flamer"]
