[package]
name = "c2rust-refactor"
version = "0.21.0"
authors = [
  "The C2Rust Project Developers <c2rust@immunant.com>",
  "Stuart Pernsteiner <spernsteiner@galois.com>",
]
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust"
description = "C2Rust refactoring tool implementation"
edition = "2021"

[dependencies]
diff = "0.1"
json = "0.12"
libc = "0.2"
regex = "1.1"
ena = "0.13"
indexmap = { version = "1.0.1", features = ["serde-1"] }
cargo = "0.62"
clap = {version = "2.33", features = ["yaml"]}
c2rust-analysis-rt = { path = "../analysis/runtime", version = "0.21.0" }
env_logger = "0.10"
log = "0.4"
rlua = "0.17"
slotmap = {version = "1.0.7", features = ["unstable"]}
derive_more = "=0.99.17"
c2rust-macros = { version = "0.21.0", path = "../c2rust-macros" }
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.4", optional = true }
failure = "0.1"
bincode = "1.0.1"
petgraph = "0.4"
cargo-util = "0.1.2"
shlex = "1.3"

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.21.0" }

[dev-dependencies]
z3 = "0.12.0"
quickcheck = "0.9.0"
rand = "0.7"

[features]
default = []
profile = ["flame", "flamer"]

[package.metadata.rust-analyzer]
rustc_private = true
