[package]
name = "c2rust-refactor"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C2Rust refactoring tool implementation"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
diff = "0.1"
json = "0.12"
libc = "0.2"
regex = "1.1"
ena = "0.13"
indexmap = { version = "1.0.1", features = ["serde-1"] }
cargo = "0.65"
clap = {version = "2.33", features = ["yaml"]}
c2rust-analysis-rt = { path = "../analysis/runtime", version = "0.22.1" }
env_logger = "0.10"
log = "0.4"
rlua = "0.17"
slotmap = {version = "1.0.7", features = ["unstable"]}
derive_more = "=0.99.17"
c2rust-macros = { path = "../c2rust-macros", version = "0.22.1" }
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.4", optional = true }
failure = "0.1"
bincode = "1.0.1"
petgraph = "0.4"
cargo-util = "0.2.1"
shlex = "1.3"
kstring = "=2.0.0" # v2.0.0 has a MSRV of 1.59, while v2.0.1 has a MSRV of 1.73, but we're pinned to 1.65.

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.22.1" }

[dev-dependencies]
z3 = "0.12.0"
quickcheck = "0.9.0"
rand = "0.7"
fs-err = "3.3.0"
insta = "1.46.3"
c2rust-rust-tools = { path = "../c2rust-rust-tools", version = "0.22.1" }
itertools = "0.14.0"

[features]
default = []
profile = ["flame", "flamer"]

[package.metadata.rust-analyzer]
rustc_private = true
