[package]
name = "c2rust-transpile"
version = "0.16.0"
authors = [
  "The C2Rust Project Developers <c2rust@immunant.com>",
  "Eric Mertens <emertens@galois.com>",
  "Alec Theriault <atheriault@galois.com>",
]
license = "BSD-3-Clause"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust"
description = "C2Rust transpiler implementation"
edition = "2021"

[dependencies]
c2rust-ast-builder = { version = "0.16.0", path = "../c2rust-ast-builder" }
c2rust-ast-exporter = { version = "0.16.0", path = "../c2rust-ast-exporter" }
c2rust-ast-printer = { version = "0.16.0", path = "../c2rust-ast-printer" }
colored = "2.0"
dtoa = "1.0"
failure = "0.1.5"
fern = { version = "0.6", features = ["colored"] }
handlebars = "4.2"
indexmap = { version = "1.0.1", features = ["serde-1"] }
itertools = "0.10"
libc = "0.2"
log = "0.4"
log-reroute = "0.1"
pathdiff = "0.2"
proc-macro2 = "1.0"
regex = "1"
serde = { version = "1.0", features = ["rc"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_derive = "1.0.80"
serde_json = "1.0"
smallvec = "1.0"
strum = "0.24"
strum_macros = "0.24"
syn = { version = "1.0", features = ["full", "extra-traits", "parsing", "printing"]}

[features]
# Force static linking of LLVM
llvm-static = ["c2rust-ast-exporter/llvm-static"]
