[package]
authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
categories = ["development-tools", "development-tools::ffi", "command-line-utilities"]
default-run = "c2rust"
description = "C to Rust translation, refactoring, and cross-checking"
edition = "2021"
homepage = "https://c2rust.com/"
keywords = ["transpiler", "migration", "translation", "c"]
license = "BSD-3-Clause"
name = "c2rust"
readme = "README.md"
repository = "https://github.com/immunant/c2rust"
version = "0.16.0"

[badges]
azure-devops = {project = "immunant/c2rust", pipeline = "immunant.c2rust", build = "1"}
travis-ci = {repository = "immunant/c2rust"}

[dependencies]
anyhow = "1.0"
c2rust-transpile = {version = "0.16.0", path = "../c2rust-transpile"}
clap = {version = "3", features = ["yaml", "cargo"]}
env_logger = "0.9"
git-testament = "0.2.1"
is_executable = "1.0"
log = "0.4"
regex = "1.6"
shlex = "1.1"

[build-dependencies]
c2rust-build-paths = {path = "../c2rust-build-paths"}

[features]
# Force static linking of LLVM
llvm-static = ["c2rust-transpile/llvm-static"]
