[package]
name = "c2rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C to Rust translation, refactoring, and cross-checking"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "c2rust"

[badges]
travis-ci = { repository = "immunant/c2rust" }
azure-devops = { project = "immunant/c2rust", pipeline = "immunant.c2rust", build="1" }

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.22", features = ["yaml", "cargo", "derive"] }
env_logger = "0.10"
git-testament = "0.2.1"
is_executable = "1.0"
log = "0.4"
regex = "1.3"
shlex = "1.3"
c2rust-transpile = { version = "0.18.0", path = "../c2rust-transpile" }
# Required to avoid too-new version (dep of git-testament) which our rustc cannot compile
time-macros = "=0.2.6"

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.18.0" }

[features]
# Force static linking of LLVM
llvm-static = ["c2rust-transpile/llvm-static"]
