[package]
name = "c2rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C to Rust translation, refactoring, and cross-checking"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "c2rust"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.22", features = ["yaml", "cargo", "derive"] }
env_logger = "0.10"
is_executable = "1.0"
log = "0.4"
regex = "1.3"
shlex = "1.3"
c2rust-transpile = { version = "0.21.0", path = "../c2rust-transpile" }

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.21.0" }

[features]
# Force static linking of LLVM
llvm-static = ["c2rust-transpile/llvm-static"]
