[package]
name = "c2rust-instrument"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.0.1"
c2rust-analysis-rt = { path = "../analysis/runtime"}
indexmap = "1.8"
itertools = "0.10"
once_cell = "1.13"
log = "0.4"
fs-err = "2"
clap = { version = "3.2", features = ["derive"] }
camino = "1.0"
# Used for parsing `rust-toolchain.toml`.
# We don't need to edit at all, but `cargo` uses `toml-edit`, so we want to match it.
toml_edit = "0.14"
fs2 = "0.4"
env_logger = "0.9"
tempfile = "3.3"

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths" }

[package.metadata.rust-analyzer] 
rustc_private = true
