[package]
name = "c2rust-instrument"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C2Rust instrumentation of Rust code for dynamic analysis"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
bincode = "1.0.1"
c2rust-analysis-rt = { path = "../analysis/runtime", version = "0.21.0" }
indexmap = "1.9"
itertools = "0.10"
once_cell = "1.13"
log = "0.4"
fs-err = "2"
clap = { version = "3.2", features = ["derive"] }
# Used for parsing `rust-toolchain.toml`.
# We don't need to edit at all, but `cargo` uses `toml-edit`, so we want to match it.
toml_edit = "0.19"
fs2 = "0.4"
env_logger = "0.10"
tempfile = "3.3"
rand = "0.8.5"

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.21.0" }

[package.metadata.rust-analyzer] 
rustc_private = true
